# pyini

./: README.md  pyproject.toml  requirements.txt  test1.ini
.github/workflows/: publish.yml
src/pyini/: main.py
